# advent-of-code

./: pyproject.toml
2019/: Pipfile
2019/day1/: day1.py
2019/day2/: day2.py
2019/day3/: day3p1.py  day3p2.py
2019/day4/: day4.py
2020/: Pipfile
2020/day1/: part1.py  part2.py
2020/day2/: part1.py
2021/: Pipfile
2021/day1/: part1.py  part2.py
2021/day2/: part1.py  part2.py
2021/day3/: part1.py  part2.py
2021/day4/: part1.py  part2.py
2021/day5/: part1.py  part2.py
2021/day6/: part1.py  part2.py
2021/day7/: part1.py  part2.py
2021/day8/: part1.py  part2.py
2021/day9/: part1.py
2022/day1/: part1.py
2022/day10/: part1.py
2022/day11/: part2.py
2022/day2/: part1.py  part2.py
2022/day24/: part1.py
2022/day3/: part1.py  part2.py
2022/day4/: part1.py  part2.py
2022/day5/: part1.py  part2.py
2022/day6/: part1.py  part2.py
2022/day7/: part1.py  part2.py
2022/day8/: part1.py  part2.py
2022/day9/: part1.py  part2.py
2023/day1/: part1.py
2023/day2/: part1.py  part2.py
2023/day3/: part1.py  part2.py
2023/day4/: part1.py  part2.py  test.txt
2024/day1/: part1.py  part2.py
2024/day10/: part1.py  part2.py
2024/day11/: part1.py  part2.py
2024/day13/: part1.py
2024/day2/: part1.py  part2.py
2024/day3/: part1.py  part2.py
2024/day4/: part1.py  part2.py
2024/day5/: part1.py  part2.py
2024/day6/: part1.py  part2.py
2024/day7/: part1.py  part2.py
2024/day8/: part1.py  part2.py
2024/day9/: part1.py  part2.py
day10/: part2.py
