[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Gray Sanborn <gray@sanborn.pw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
